--- a/index.html
+++ b/index.html
@@ -29,8 +29,20 @@
 
   <ul class='book-grid-container'>
     <li class='book-grid-item'>
-      <div class="btn-delete">
-        <i class="fas fa-times-circle"></i>
+      <div class='book-title'>hobbit</div>
+
+      <div class='book-author'>tolkien</div>
+      
+      <div class='buttons-overlay'>
+        <div class='btn-read'>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
+        <div class="btn-delete">
+          <i class="fas fa-times-circle"></i>
+        </div>
       </div>
     </li>
   </ul>
