--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class='book-title'>hobbit</div>
 
       <div class='book-author'>tolkien</div>
-      
+
       <div class='buttons-overlay'>
         <div class='btn-read'>
           <label class="switch">
@@ -58,6 +58,11 @@
 
       <label for=author><b>Author</b></label>
       <input type="text" placeholder="Enter book author" name="author" required>
+
+      <label class="switch">
+        <input type="checkbox" name="completed">
+        <span class="slider round"></span>
+      </label>
 
       <button type="submit" class="btn">Add</button>
       <button type="button" class="btn cancel">Close</button>
