added dynamic date and fixed read toggle button in form

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
       <label for=author><b>Author</b></label>
       <input type="text" placeholder="Enter book author" name="author" required>
-
+      
+      <b>Read ?</b></br>
       <label class="switch">
         <input type="checkbox" name="completed">
         <span class="slider round"></span>
